force-app/main/default/objects/Registration__c/fields/External_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Registration_URL__c</fullName>
    <description>Deprecated - Must not be used</description>
    <formula>$Setup.RegoSettings__c.sfdcHostName__c + &#39;?Id=&#39; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deprecated - Must not be used</inlineHelpText>
    <label>External Registration URL</label>
    <type>Text</type>
</CustomField>