force-app/main/default/objects/Registration__c/fields/External_Registration_URL_Https__c.field-meta.xml
<CustomField>
    <fullName>External_Registration_URL_Https__c</fullName>
    <description>Deprecated - Must not be used</description>
    <formula>&quot;https://&quot; + External_Registration_URL__c + &quot;&amp;step=TandC&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deprecated - Must not be used</inlineHelpText>
    <label>External Registration URL Https</label>
    <type>Text</type>
</CustomField>