force-app/main/default/objects/Registration__c/fields/GDS_Details__c.field-meta.xml
<CustomField>
    <fullName>GDS_Details__c</fullName>
    <label>GDS Details (To Delete)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Worldspan</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Axess</fullName>
            </value>
            <value>
                <fullName>Topas</fullName>
            </value>
            <value>
                <fullName>Infini</fullName>
            </value>
            <value>
                <fullName>Sirena</fullName>
            </value>
            <value>
                <fullName>Travelsky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>