force-app/main/default/objects/Registration__c/fields/Geo_IP__c.field-meta.xml
<CustomField>
    <fullName>Geo_IP__c</fullName>
    <label>Geo IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>