force-app/main/default/objects/Registration__c/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <label>Geo Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>