force-app/main/default/objects/Registration__c/fields/Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Region__c</fullName>
    <label>Geo Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>