force-app/main/default/objects/Registration__c/fields/Historical_Override__c.field-meta.xml
<CustomField>
    <fullName>Historical_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Override</label>
    <type>Checkbox</type>
</CustomField>