force-app/main/default/objects/Registration__c/fields/IATA_ARC_TIDS_Number__c.field-meta.xml
<CustomField>
    <fullName>IATA_ARC_TIDS_Number__c</fullName>
    <label>IATA/ARC/TIDS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>