force-app/main/default/objects/Registration__c/fields/Includes_VANs_Account_Approved__c.field-meta.xml
<CustomField>
    <fullName>Includes_VANs_Account_Approved__c</fullName>
    <description>Check if the registration has VANs product and if its account has been approved.</description>
    <formula>AND( Reg_Contains_VANs__c = true, Account_Approved__c =true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Includes VANs &amp; Account Approved</label>
    <type>Checkbox</type>
</CustomField>