force-app/main/default/objects/Registration__c/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <description>From Lead</description>
    <label>Industry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>