force-app/main/default/objects/Registration__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <inlineHelpText>e.g. CEO, Director, Manager</inlineHelpText>
    <label>Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>