force-app/main/default/objects/Registration__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Copied from the Registration&#39;s converted Lead</description>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>