force-app/main/default/objects/Registration__c/fields/Marketing_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Subscription</label>
    <type>Checkbox</type>
</CustomField>