force-app/main/default/objects/Registration__c/fields/Net_Duration_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Net_Duration_Business_Days__c</fullName>
    <formula>DD_Total_Business_Hours__c / 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Diligence Period (Business Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>