force-app/main/default/objects/Registration__c/fields/No_business_email_reason__c.field-meta.xml
<CustomField>
    <fullName>No_business_email_reason__c</fullName>
    <inlineHelpText>Enter reason why the Client Contact does not have a business email address.</inlineHelpText>
    <label>No business email reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>