force-app/main/default/objects/Registration__c/fields/Online_Registration_Max_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Online_Registration_Max_Sub_Stage__c</fullName>
    <formula>CASE(Online_Registration_Sub_Stage__c, 
&#39;Contact Details&#39;, 1,
&#39;Product Selection&#39;, 2,
&#39;Overview&#39;, 3,
&#39;Business Details&#39;, 4,
&#39;Address Details&#39;, 5,
&#39;Signatory Details&#39;, 6,
&#39;Beneficial Owners&#39;, 7,
&#39;Business Directors&#39;, 8,
&#39;Travel Group Details&#39;, 9,
&#39;Financial Accounts&#39;, 10,
&#39;Review/Confirmation&#39;, 11,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online Registration Max Sub Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>