force-app/main/default/objects/Registration__c/fields/Online_Registration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Online_Registration_Stage__c</fullName>
    <inlineHelpText>The Stage an External Registration is at. Automatically populated via the external form</inlineHelpText>
    <label>Online Registration Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact or Product Details</fullName>
            </value>
            <value>
                <fullName>Overview</fullName>
            </value>
            <value>
                <fullName>Financial Accounts</fullName>
            </value>
            <value>
                <fullName>Review Confirmation</fullName>
            </value>
            <value>
                <fullName>Business Set Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>