force-app/main/default/objects/Registration__c/fields/Online_Registration_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Online_Registration_Sub_Stage__c</fullName>
    <description>This holds the sub stage a user is at when filling in an external registration.</description>
    <label>Online Registration Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Details</fullName>
                <default>true</default>
                <label>Contact Details</label>
            </value>
            <value>
                <fullName>Product Selection</fullName>
            </value>
            <value>
                <fullName>Overview</fullName>
            </value>
            <value>
                <fullName>Business Details</fullName>
            </value>
            <value>
                <fullName>Address Details</fullName>
            </value>
            <value>
                <fullName>Signatory Details</fullName>
            </value>
            <value>
                <fullName>Beneficial Owners</fullName>
            </value>
            <value>
                <fullName>Business Directors</fullName>
            </value>
            <value>
                <fullName>Travel Group Details</fullName>
            </value>
            <value>
                <fullName>Financial Accounts</fullName>
            </value>
            <value>
                <fullName>Review/Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>