force-app/main/default/objects/Registration__c/fields/ORG_ID_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ORG_ID_Due_Date__c</fullName>
    <description>Org ID notification received date + 21 working days</description>
    <inlineHelpText>Org ID notification received date + 21 working days</inlineHelpText>
    <label>ORG ID Due Date</label>
    <type>Date</type>
</CustomField>