force-app/main/default/objects/Registration__c/fields/Org_ID_notification_received__c.field-meta.xml
<CustomField>
    <fullName>Org_ID_notification_received__c</fullName>
    <description>email or published</description>
    <inlineHelpText>email or published</inlineHelpText>
    <label>ORG ID notification received</label>
    <type>Date</type>
</CustomField>