force-app/main/default/objects/Registration__c/fields/Org_ID_Status__c.field-meta.xml
<CustomField>
    <fullName>Org_ID_Status__c</fullName>
    <label>ORG ID Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Client - Attestation Report</fullName>
            </value>
            <value>
                <fullName>Awaiting Client - Doc Request</fullName>
            </value>
            <value>
                <fullName>Awaiting Org ID Response</fullName>
            </value>
            <value>
                <fullName>Close record</fullName>
            </value>
            <value>
                <fullName>Information uploaded to Org ID</fullName>
            </value>
            <value>
                <fullName>Profile Report - Accepted</fullName>
            </value>
            <value>
                <fullName>Profile Report - Published</fullName>
            </value>
            <value>
                <fullName>re-DD awaiting re-approval</fullName>
                <label>Re-DD awaiting re-approval</label>
            </value>
            <value>
                <fullName>re-DD complete</fullName>
                <label>Re-DD complete</label>
            </value>
            <value>
                <fullName>With_AML_Team</fullName>
                <label>With AML Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>