force-app/main/default/objects/Registration__c/fields/PCC_or_SID__c.field-meta.xml
<CustomField>
    <fullName>PCC_or_SID__c</fullName>
    <label>PCC or SID (To Delete)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>