force-app/main/default/objects/Registration__c/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This option must be selected if the Principal Signatory has been identified as PEP.  If selected, PEP details are added in the Principal Signatory PEPs section.</inlineHelpText>
    <label>PEP</label>
    <type>Checkbox</type>
</CustomField>