force-app/main/default/objects/Registration__c/fields/Principal_Signatory_Validation_Error1__c.field-meta.xml
<CustomField>
    <fullName>Principal_Signatory_Validation_Error1__c</fullName>
    <formula>(ISPICKVAL(Business_Type__c, &#39;Sole Trader&#39;) || ISPICKVAL(Business_Type__c, &#39;Partnership&#39;) || ISPICKVAL(Business_Type__c, &#39;Association/Club&#39;)) &amp;&amp; INCLUDES(Product__c, &#39;VANs&#39;) &amp;&amp; NOT(Ver_Principal_Signatory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Signatory Validation Error1</label>
    <type>Checkbox</type>
</CustomField>