force-app/main/default/objects/Registration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VANs</fullName>
            </value>
            <value>
                <fullName>feeNett</fullName>
            </value>
            <value>
                <fullName>VirtualTerminal</fullName>
            </value>
            <value>
                <fullName>eNett EFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>