force-app/main/default/objects/Registration__c/fields/Purpose_of_VAN_Account__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_VAN_Account__c</fullName>
    <label>Purpose and Use of VAN Account</label>
    <type>TextArea</type>
</CustomField>