force-app/main/default/objects/Registration__c/fields/Re_DD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_DD_Due_Date__c</fullName>
    <formula>Account__r.Re_DD_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-DD Due Date</label>
    <type>Date</type>
</CustomField>