force-app/main/default/objects/Registration__c/fields/Re_DD_Reason__c.field-meta.xml
<CustomField>
    <fullName>Re_DD_Reason__c</fullName>
    <inlineHelpText>Must be provided for manual re DD (When the user select the &#39;re DD&#39; button on the account</inlineHelpText>
    <label>Re DD Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>