force-app/main/default/objects/Registration__c/fields/Refer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refer_Reason__c</fullName>
    <label>Refer Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>