force-app/main/default/objects/Registration__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations (Referrer)</relationshipLabel>
    <relationshipName>ReferrerRegistrations</relationshipName>
    <type>Lookup</type>
</CustomField>