force-app/main/default/objects/Registration__c/fields/Referrer_ECN__c.field-meta.xml
<CustomField>
    <fullName>Referrer_ECN__c</fullName>
    <label>Referrer ECN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>