force-app/main/default/objects/Registration__c/fields/Reg_Contains_EFT__c.field-meta.xml
<CustomField>
    <fullName>Reg_Contains_EFT__c</fullName>
    <formula>INCLUDES(Product__c , &#39;eNett EFT&#39;)</formula>
    <label>Reg Contains EFT</label>
    <type>Checkbox</type>
</CustomField>