force-app/main/default/objects/Registration__c/fields/Reg_Contains_VANs__c.field-meta.xml
<CustomField>
    <fullName>Reg_Contains_VANs__c</fullName>
    <formula>INCLUDES(Product__c , &#39;VANs&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Contains VANs</label>
    <type>Checkbox</type>
</CustomField>