force-app/main/default/objects/Registration__c/fields/RegBusiness_City__c.field-meta.xml
<CustomField>
    <fullName>RegBusiness_City__c</fullName>
    <label>Reg Bus City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>