force-app/main/default/objects/Registration__c/fields/RegBusiness_State_Province__c.field-meta.xml
<CustomField>
    <fullName>RegBusiness_State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reg Bus State/Province</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RegBusiness_Country__c</field>
            <operation>equals</operation>
            <valueField>State_Detail__c.Country_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Detail__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>