force-app/main/default/objects/Registration__c/fields/Registered_Business_is_Same_as_Above__c.field-meta.xml
<CustomField>
    <fullName>Registered_Business_is_Same_as_Above__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Same As Business</label>
    <type>Checkbox</type>
</CustomField>