force-app/main/default/objects/Registration__c/fields/Registered_Company_Name_Check__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company_Name_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered Company Name</label>
    <type>Checkbox</type>
</CustomField>