force-app/main/default/objects/Registration__c/fields/Registration_Active_Elapsed_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Registration_Active_Elapsed_Time_Days__c</fullName>
    <formula>Account__r.Account_Activation_Date__c - Registration_Started__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Active Elapsed Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>