force-app/main/default/objects/Registration__c/fields/Registration_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Completed_Date__c</fullName>
    <inlineHelpText>Automatically populated based on the date the registration was set to the status of completed.</inlineHelpText>
    <label>Registration Completed Date</label>
    <type>DateTime</type>
</CustomField>