force-app/main/default/objects/Registration__c/fields/Registration_Email_Sent_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Registration_Email_Sent_to_Client__c</fullName>
    <label>Registration Email Sent to Client</label>
    <type>DateTime</type>
</CustomField>