force-app/main/default/objects/Registration__c/fields/Registration_Start_Elapsed_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Registration_Start_Elapsed_Time_Days__c</fullName>
    <formula>Registration_Started__c-CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Start Elapsed Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>