force-app/main/default/objects/Registration__c/fields/Registration_Started__c.field-meta.xml
<CustomField>
    <fullName>Registration_Started__c</fullName>
    <inlineHelpText>Automatically populates when the user selects &#39;Start Registration&#39; button and the status of the registration is set to &#39;In Progress&#39;</inlineHelpText>
    <label>Registration Started</label>
    <type>DateTime</type>
</CustomField>