force-app/main/default/objects/Registration__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <inlineHelpText>Default is new and is automatically populated as the user selects start or complete registration button.</inlineHelpText>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Awaiting Acceptance</fullName>
            </value>
            <value>
                <fullName>New (Product)</fullName>
            </value>
            <value>
                <fullName>Rejected - Non-responsive</fullName>
            </value>
            <value>
                <fullName>Rejected - Spam/test application</fullName>
            </value>
            <value>
                <fullName>Rejected - Application N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>