force-app/main/default/objects/Registration__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <inlineHelpText>Automatically populated based on the type of registration.</inlineHelpText>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Registration</fullName>
            </value>
            <value>
                <fullName>External Registration</fullName>
            </value>
            <value>
                <fullName>Internal Registration - Re Reg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>