force-app/main/default/objects/Registration__c/fields/RegState__c.field-meta.xml
<CustomField>
    <fullName>RegState__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>