force-app/main/default/objects/Registration__c/fields/Relationship_Channel__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Channel__c</fullName>
    <formula>Text(Account__r.Relationship_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Channel</label>
    <type>Text</type>
</CustomField>