force-app/main/default/objects/Registration__c/fields/Resume_Application__c.field-meta.xml
<CustomField>
    <fullName>Resume_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when a customer clicks the Resume application button on the external registration form. Triggers an email to be sent from Salesforce to the customer.</inlineHelpText>
    <label>Resume Application</label>
    <type>Checkbox</type>
</CustomField>