force-app/main/default/objects/Registration__c/fields/Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Assessment</label>
    <type>Checkbox</type>
</CustomField>