force-app/main/default/objects/Registration__c/fields/Risk_Factor__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factor__c</fullName>
    <label>Risk Factor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>