force-app/main/default/objects/Registration__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <inlineHelpText>Automatically populated based on the risk rating selected in the Risk Assessment record.</inlineHelpText>
    <label>Risk Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>